# wxyzmonad

./: .gitignore  Build  Config.hs  Glue.hsc  LICENSE  Layout.hs  Lib.hsc  Main.hsc  Makefile  README.md  StackSet.hs  Tiling.hs  WXYZMonad.hs  WXYZMonad.hsc  lib.h  tinywl.c  tinywl.h  wxyzmonad.cabal
exe/: Njr.hs
src/: Event.hsc  Key.hsc  MainWXYZ.hsc  Operations.hsc  StackSet.hs  Tiling.hs  WXYZMain.hsc  WXYZMonad.hsc  clib.c  clib.h
